--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://catrip:05082024@catrip.rkklqtu.mongodb.net/?retryWrites=true&w=majority&appName=CaTrip
+MONGODB_URI="mongodb+srv://catrip:05082024@catrip.rkklqtu.mongodb.net/?retryWrites=true&w=majority&appName=CaTrip"
 JWT_SECRET="catrip secret"
