--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.9.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.3.1",
     "mongodb": "^6.8.0",
     "zod": "^3.23.8"
   }
