--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.16.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "graphql": "^16.9.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
