--- a/Apollo/package.json
+++ b/Apollo/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand --coverage --watchAll --verbose",
     "dev": "npx nodemon app"
   },
   "keywords": [],
@@ -18,9 +18,11 @@
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "ioredis": "^5.4.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "mongodb": "^6.8.0",
+    "supertest": "^7.0.0",
     "zod": "^3.23.8"
   }
 }
